--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -175,7 +175,7 @@
                     <div id="registration-form" class="form-section">
                         <form method="post" enctype="multipart/form-data" id="signup-form">
                             {% csrf_token %}
-                            <input type="hidden" id="selected-role" name="type_role" value="">
+                            <input type="hidden" id="selected-role" name="role_type" value="">
                             
                             <h4 class="fw-bold mb-4" id="form-title">Informations personnelles</h4>
                             
