--- a/templates/projects/public_detail.html
+++ b/templates/projects/public_detail.html
@@ -910,7 +910,7 @@
                                             <li>Créez un compte investisseur</li>
                                             <li>Investissez dans ce projet</li>
                                         </ol>
-                                        <a href="{% url 'admin_perso:signup' %}" class="btn btn-sm btn-primary">
+                                        <a href="{% url 'accounts:register' %}" class="btn btn-sm btn-primary">
                                             <i class="fas fa-user-plus me-1"></i>Créer un compte
                                         </a>
                                     </div>
